--- a/services/client/package.json
+++ b/services/client/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.0",
   "description": "A simple chat client using socket.io",
   "main": "index.js",
-  "private": true,
-  "license": "BSD",
+  "license": "MIT",
   "dependencies": {
     "async": "^2.6.0",
     "aws-sdk": "2.262.1",
@@ -16,15 +15,6 @@
     "redis": "2.8.0",
     "socket.io": "2.1.1",
     "socket.io-redis": "5.2.0"
-  },
-  "devDependencies": {
-    "chai": "4.1.2",
-    "mocha": "5.2.0",
-    "request-promise-native": "1.0.5",
-    "request": "2.87.0"
-  },
-  "scripts": {
-    "start": "LOCAL=true REGION=us-east-1 ENV_NAME=test REDIS_ENDPOINT=localhost DYNAMODB_ENDPOINT=http://localhost:8000 AWS_ACCESS_KEY_ID=test AWS_SECRET_ACCESS_KEY=test node index.js"
   },
   "eslintConfig": {
     "globals": {
