--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,12 +14,12 @@ services:
   # Launch localstack (https://github.com/localstack/localstack)
   # This container mimics AWS services locally for offline testing
   # and development purposes.
-  local-stack:
+  localstack:
     image: localstack/localstack
     networks:
       - chat
     ports:
-      # DyanmoDB Local
+      # DynamoDB Local
       - 4569
       # SNS local
       - 4575
@@ -30,14 +30,14 @@ services:
   # the local DynamoDB tables, SNS topics, and SQS queues
   bootstrap-resources:
     depends_on:
-      - local-stack
+      - localstack
     networks:
       - chat
     build: ./deps/bootstrap-resources
     environment:
-      DYNAMODB_ENDPOINT: http://local-stack:4569
-      SQS_ENDPOINT: http://local-stack:4576
-      SNS_ENDPOINT: http://local-stack:4575
+      DYNAMODB_ENDPOINT: http://localstack:4569
+      SQS_ENDPOINT: http://localstack:4576
+      SNS_ENDPOINT: http://localstack:4575
       AWS_ACCESS_KEY_ID: test
       AWS_SECRET_ACCESS_KEY: test
 
@@ -53,9 +53,9 @@ services:
       LOCAL: "true"
       ENV_NAME: test
       REDIS_ENDPOINT: redis
-      DYNAMODB_ENDPOINT: http://local-stack:4569
-      SQS_ENDPOINT: http://local-stack:4576
-      SNS_ENDPOINT: http://local-stack:4575
+      DYNAMODB_ENDPOINT: http://localstack:4569
+      SQS_ENDPOINT: http://localstack:4576
+      SNS_ENDPOINT: http://localstack:4575
       MESSAGE_SENT_SNS_ARN: arn:aws:sns:us-east-1:123456789012:test_MessageSent
       AWS_ACCESS_KEY_ID: test
       AWS_SECRET_ACCESS_KEY: test
@@ -74,7 +74,7 @@ services:
       LOCAL: "true"
       ENV_NAME: test
       REDIS_ENDPOINT: redis
-      QUEUE_URL: http://local-stack:4576/queue/test_MessagesToCardify
+      QUEUE_URL: http://localstack:4576/queue/test_MessagesToCardify
       AWS_ACCESS_KEY_ID: test
       AWS_SECRET_ACCESS_KEY: test
 
