--- a/pipeline.yml
+++ b/pipeline.yml
@@ -181,7 +181,7 @@ Resources:
             Value: !Ref AWS::Region
           - Name: REPOSITORY_URI
             Value: !Sub ${AWS::AccountId}.dkr.ecr.${AWS::Region}.amazonaws.com/${Repository}
-      Name: !Ref AWS::StackName
+      Name: !Ref AWS::StackName-chat-frontend
       ServiceRole: !Ref CodeBuildServiceRole
 
   # This is the definition of how to build the code in the repository
@@ -218,7 +218,7 @@ Resources:
             Value: !Ref AWS::Region
           - Name: REPOSITORY_URI
             Value: !Sub ${AWS::AccountId}.dkr.ecr.${AWS::Region}.amazonaws.com/${Repository}
-      Name: !Ref AWS::StackName
+      Name: !Ref AWS::StackName-message-cards
       ServiceRole: !Ref CodeBuildServiceRole
 
   # This pipeline defines the steps to build, deploy, and release the application
