Fixing service name reference in message cards

--- a/templates/message-cards-service.yml
+++ b/templates/message-cards-service.yml
@@ -8,7 +8,7 @@ Parameters:
                  Used to locate other resources in the same environment.
   ServiceName:
     Type: String
-    Default: chat
+    Default: message-cards
     Description: A name for the service
   ImageUrl:
     Type: String
