--- a/templates/resources.yml
+++ b/templates/resources.yml
@@ -117,7 +117,7 @@ Resources:
               Action:
                 - "sns:publish"
               Resource:
-                - !Ref MessageSent
+                - !Ref MessageSentTopic
 
   # Role for the service that generates message cards
   MessageCardsRole:
@@ -138,7 +138,7 @@ Resources:
               Action:
                 - "sqs:*"
               Resource:
-                - !Ref MessagesToCardify
+                - !Ref MessagesToCardifyQueue
 
   # An SNS topic for the chat service to publish to
   MessageSentTopic:
