Fixing queue URL which should have been a queue ARN

--- a/templates/pipeline.yml
+++ b/templates/pipeline.yml
@@ -140,6 +140,8 @@ Resources:
                   - "application-autoscaling:*"
                   - "cloudwatch:*"
                   - "route53:*"
+                  - "sns:*"
+                  - "sqs:*"
                 Resource: "*"
 
   # While the build is in progress we need a place to store artifacts
