Adding missing SSM IAM permission to the pipeline role

--- a/templates/pipeline.yml
+++ b/templates/pipeline.yml
@@ -142,6 +142,7 @@ Resources:
                   - "route53:*"
                   - "sns:*"
                   - "sqs:*"
+                  - "ssm:*"
                 Resource: "*"
 
   # While the build is in progress we need a place to store artifacts
