Policy document needed the queue URL not the queue ARN

--- a/templates/resources.yml
+++ b/templates/resources.yml
@@ -158,7 +158,7 @@ Resources:
     Type: AWS::SQS::QueuePolicy
     Properties:
       Queues:
-        - !GetAtt MessagesToCardifyQueue.Arn
+        - !Ref MessagesToCardifyQueue
       PolicyDocument:
         Version: 2012-10-17
         Statement:
