--- a/services/message-cards/package.json
+++ b/services/message-cards/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "async": "^2.6.0",
     "cheerio": "1.0.0-rc.2",
+    "dd-trace": "0.5.1",
     "redis": "2.8.0",
     "socket.io-redis": "5.2.0",
     "squiss": "2.2.1"
