--- a/services/client/package.json
+++ b/services/client/package.json
@@ -1,27 +1,22 @@
 {
   "name": "socket.io-chat",
   "version": "0.0.0",
+  "type": "module",
   "description": "A simple chat client using socket.io",
   "main": "index.js",
   "private": true,
   "license": "BSD",
   "dependencies": {
-    "async": "^2.6.0",
-    "aws-sdk": "2.262.1",
-    "bcrypt": "2.0.1",
-    "compression": "^1.7.2",
-    "express": "4.16.3",
+    "async": "3.2.4",
+    "aws-sdk": "2.1306.0",
+    "bcrypt": "5.1.0",
+    "compression": "1.7.4",
+    "express": "4.18.2",
     "express-sslify": "^1.2.0",
-    "lodash": "^4.17.5",
-    "redis": "2.8.0",
-    "socket.io": "2.1.1",
-    "socket.io-redis": "5.2.0"
-  },
-  "devDependencies": {
-    "chai": "4.1.2",
-    "mocha": "5.2.0",
-    "request-promise-native": "1.0.5",
-    "request": "2.87.0"
+    "lodash": "4.17.21",
+    "redis": "4.6.4",
+    "socket.io": "4.5.4",
+    "@socket.io/redis-adapter": "8.0.1"
   },
   "scripts": {
     "start": "LOCAL=true REGION=us-east-1 ENV_NAME=test REDIS_ENDPOINT=localhost DYNAMODB_ENDPOINT=http://localhost:8000 AWS_ACCESS_KEY_ID=test AWS_SECRET_ACCESS_KEY=test node index.js"
