--- a/services/client/package.json
+++ b/services/client/package.json
@@ -8,7 +8,7 @@
   "license": "BSD",
   "dependencies": {
     "async": "3.2.4",
-    "aws-sdk": "2.1306.0",
+    "@aws-sdk/lib-dynamodb": "3.245.0",
     "bcrypt": "5.1.0",
     "compression": "1.7.4",
     "express": "4.18.2",
